--- a/northwind/resources/northwind.properties
+++ b/northwind/resources/northwind.properties
@@ -4,5 +4,5 @@ uri=./northwind/resources/database/Northwind.sqlite
 name=localhost
 port=8098
 [api]
-specdir=./northwind/resources/
+specdir=../../resources/
 spec=northwind.yaml
