--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     "python.testing.unittestEnabled": false,
     "python.testing.pytestArgs": [
         "test"
-    ]
+    ],
+    "python.linting.enabled": true
 }
